# isaac_so_arm101

./: .gitignore  README.md  pyproject.toml
src/isaac_so_arm101/robots/: __init__.py
src/isaac_so_arm101/robots/pingti/: PingTi_Arm_5DOF_v4_copy.urdf  PingTi_Arm_5DOF_v4_copy.xacro  pingti.py
src/isaac_so_arm101/robots/pingti/meshes/: STS3215_base_yaw_1.stl  STS3215_elbow_pitch_1_1.stl  STS3215_elbow_pitch_2_1.stl  STS3215_gripper_1.stl  STS3215_shoulder_pitch_1_1.stl  STS3215_shoulder_pitch_2_1.stl  STS3215_wrist_pitch_1.stl  STS3215_wrist_roll_1.stl  base_link.stl  base_yaw_link_1.stl  elbow_link_1.stl  gripper_mount_1.stl  moving_gripper_1.stl  shoulder_link_1.stl  wrist_link_1.stl  wrist_mount_link_1.stl
src/isaac_so_arm101/robots/pingti/urdf/: PingTi_Arm_v3.urdf
src/isaac_so_arm101/robots/pingti/urdf/meshes/: STS3215_shoulder_pitch_1_1.stl  STS3215_wrist_pitch_1.stl  base_link.stl  base_yaw_link_1.stl  elbow_link_1.stl  gripper_mount_1.stl  shoulder_link_1.stl
src/isaac_so_arm101/robots/pingti/urdf_original_broken_version_will_delete_later/: PingTi_Arm_v3.urdf
src/isaac_so_arm101/scripts/: list_envs.py  zero_agent.py
src/isaac_so_arm101/scripts/data_gen/: oracle_data_gen.py
src/isaac_so_arm101/scripts/rsl_rl/: train.py
src/isaac_so_arm101/scripts/vla/: vla_inference.py  vla_lora_finetune.py  vla_record_dataset.py
src/isaac_so_arm101/tasks/reach/: __init__.py  joint_pos_env_cfg.py  reach_env_cfg.py
src/isaac_so_arm101/tasks/reach/agents/: rsl_rl_ppo_cfg.py
(+9 files in other folders)
